--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/battlemidget/post-save#readme",
   "dependencies": {
     "bluebird": "^2.9.30",
-    "fs-extra-promise": "^0.1.3"
+    "fs-extra-promise": "^0.1.3",
+    "handlebars": "^3.0.3"
   }
 }
