--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "post-save",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "save a post",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/battlemidget/post-save#readme",
   "dependencies": {
     "bluebird": "^2.9.30",
-    "fs-extra-promise": "^0.1.3",
-    "handlebars": "^3.0.3"
+    "fs-extra-promise": "^0.1.3"
   }
 }
